# TRNGen

./: README.md  parameter.md  pyproject.toml
rangen/: __init__.py  core.py
rangen/dependencies/: dataset.csv
rangen/entropies/: audio.py  cursor.py  disk.py  display.py  network.py  timer.py
rangen/utils/: csv_rw.py  entropy_enhancer.py  error_checker.py
trngen/: __init__.py  core.py
trngen/entropies/: audio.py  cursor.py  disk.py
trngen/utils/: entropy_enhancer.py
